--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container {
+	position: relative;
+	background: rgba(225, 225, 225, 0.05);
+	border-radius: 6px;
+	overflow: hidden;
+	z-index: 10;
+	-webkit-backdrop-filter: blur(15px);
+	backdrop-filter: blur(15px);
+	border-top: 1px solid rgba(225, 225, 225, 0.2);
+	border-left: 1px solid rgba(225, 225, 225, 0.2);
+	-webkit-box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+	box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+	max-width: 35vw;
+	margin: 20px auto;
+	padding: 20px 30px;
+}
+.form {
+	position: relative;
+	display: grid;
+}
+.form h4 {
+	font-family: sans-serif;
+	text-align: center;
+	margin: 10px;
+}
+.form-group {
+	margin: 10px 0;
+}
+.form-input {
+	width: 100%;
+	background: transparent;
+	outline: none;
+	border: none;
+	padding: 10px;
+	border-radius: 3px;
+	box-shadow: 5px 5px 5px rgb(0 0 0 / 10%);
+}
+.form-input:focus {
+	background: rgba(255, 255, 255, 0.5);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn-submit {
+	background: #ea2828;
+	border: 1px solid #ea2828;
+	border: none;
+	outline: none;
+	padding: 10px 15px;
+	border-radius: 5px;
+	color: #fff;
+	cursor: pointer;
 }
